@startuml

class ScheduleService {
    + isDoctorFree (doctor, interval): boolean
    + enrolToDoctor (doctor, patient, interval): Appointment
}

class Person {
    + firstName: string
    + lastName: string
}

class Dairy {
    - appointments: Appointment[]
    + isFree (interval): boolean
    + addAppointment (patient, interval): Appointment
}

abstract class Doctor {
    - dairy: Dairy
    + isFree (interval): boolean
    + addAppointment (patient, interval): Appointment
}

class Patient {

}

class Time {
    + year: int
    + month: int
    + day: int
    + hours: int
    + minutes: int
}

class TimeInterval {
    + start: Time
    + end: Time
}

class Appointment {
    + patient: Patient
    + interval: TimeInterval
}

ScheduleService ...> Doctor
ScheduleService ...> Patient
ScheduleService ...> TimeInterval

Person <|-down-- Doctor
Person <|-down-- Patient

Doctor *-right-> Dairy
Dairy o--> Appointment
Appointment o-down-> TimeInterval
TimeInterval o--> Time

Doctor <|-- Therapist
Doctor <|-- Cardiologist
Doctor <|-- Oncologist

Appointment o-right--> Patient

@enduml
